--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Hechos 13:42-52 - Juego Interactivo</title>
+<title>La exhortación de Pablo en Antioquía (3ª. Parte) - Regocijo y persecución por la Palabra - Hechos 13:42-52</title>
 <style>
     body {
         font-family: Arial, sans-serif;
@@ -22,6 +22,7 @@
         display: flex;
         justify-content: space-around;
         margin-top: 30px;
+        flex-wrap: wrap;
     }
 
     .dropzone {
@@ -31,6 +32,7 @@
         border: 3px dashed #555;
         border-radius: 10px;
         background: #fff;
+        position: relative;
     }
 
     .images {
@@ -52,6 +54,7 @@
         font-weight: bold;
         cursor: grab;
         user-select: none;
+        position: relative;
     }
 
     #versiculos {
@@ -59,18 +62,76 @@
         padding: 20px;
         background: #fff;
         border-radius: 10px;
-        display: none;
         text-align: left;
         width: 70%;
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .marker {
+        position: absolute;
+        font-size: 24px;
+        font-weight: bold;
+        top: 0;
+        right: 0;
+        padding: 5px;
+        border-radius: 50%;
+    }
+
+    /* Modal de mensaje de fin */
+    #gameOverModal {
+        display: none;
+        position: fixed;
+        top:0; left:0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.6);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+        animation: fadeIn 0.5s;
+    }
+
+    #gameOverContent {
+        background: #fff;
+        padding: 30px;
+        border-radius: 15px;
+        text-align: center;
+        font-size: 24px;
+        font-weight: bold;
+        max-width: 500px;
+        animation: popIn 0.5s;
+    }
+
+    @keyframes popIn {
+        0% { transform: scale(0.5); opacity: 0; }
+        100% { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; } 
+        to { opacity: 1; }
+    }
+
+    #gameOverContent button {
+        margin-top: 20px;
+        padding: 10px 20px;
+        font-size: 18px;
+        cursor: pointer;
+        border: none;
+        background: #1976d2;
+        color: white;
+        border-radius: 8px;
     }
 </style>
 </head>
 
 <body>
 
-<h1>Hechos 13:42–52 — Juego Interactivo</h1>
+<h1>La exhortación de Pablo en Antioquía (3ª. Parte)<br>
+Regocijo y persecución por la Palabra<br>
+Hechos 13:42-52</h1>
+
 <div id="timer">Tiempo: 60</div>
 
 <h3>Arrastra cada reacción al grupo correcto</h3>
@@ -87,7 +148,7 @@
 
 <div class="images" id="imagenes">
     <div class="item" draggable="true" data-type="positivo" style="background:#4CAF50;">Regocijo</div>
-    <div class="item" draggable="true" data-type="positivo" style="background:#4CAF50;">Glorificar Palabra</div>
+    <div class="item" draggable="true" data-type="positivo" style="background:#4CAF50;">Glorificar la Palabra</div>
     <div class="item" draggable="true" data-type="positivo" style="background:#4CAF50;">Fe</div>
     <div class="item" draggable="true" data-type="positivo" style="background:#4CAF50;">Gozo</div>
 
@@ -98,90 +159,156 @@
 </div>
 
 <!-- SONIDOS -->
-<audio id="correctSound">
-    <source src="data:audio/mp3;base64,//uQxAAAAAAAAAAAAAAAAAAAAAAAWGluZwAAAA8AAAACAAACcQCA..." type="audio/mp3">
-</audio>
-<audio id="wrongSound">
-    <source src="data:audio/mp3;base64,//uQxAAAAAAAAAAAAAAAAAAAAAAAWGluZwAAAA8AAAACAAACcQCB..." type="audio/mp3">
-</audio>
+<audio id="correctSound" src="correct.mp3"></audio>
+<audio id="wrongSound" src="wrong.mp3"></audio>
 
 <div id="versiculos">
-    <h2>¡Juego completado! 🎉</h2>
-    <h3>Versículos relacionados:</h3>
-    <p><b>Hechos 13:48:</b> “Los gentiles, oyendo esto, se regocijaban y glorificaban la palabra del Señor...”</p>
-    <p><b>Hechos 13:45:</b> “Pero los judíos se llenaron de celos...”</p>
-    <p><b>Hechos 13:52:</b> “Los discípulos estaban llenos de gozo y del Espíritu Santo.”</p>
+    <h2>Versículos:</h2>
+    <div id="versiculos-items"></div>
+</div>
+
+<!-- Modal de final de juego -->
+<div id="gameOverModal">
+    <div id="gameOverContent">
+        <div id="gameOverText"></div>
+        <button onclick="location.reload()">Jugar de nuevo</button>
+    </div>
 </div>
 
 <script>
-    let items = document.querySelectorAll(".item");
-    let dropzones = document.querySelectorAll(".dropzone");
-    let totalItems = items.length;
-    let correctCount = 0;
+let items = document.querySelectorAll(".item");
+let dropzones = document.querySelectorAll(".dropzone");
+let totalItems = items.length;
+let correctCount = 0;
+let errorCount = 0;
+let gameOver = false;
 
-    let timer = 60;
-    let timerElement = document.getElementById("timer");
-    let countdown = setInterval(() => {
-        timer--;
-        timerElement.textContent = "Tiempo: " + timer;
+let timer = 60;
+let timerElement = document.getElementById("timer");
+let countdown = setInterval(() => {
+    timer--;
+    timerElement.textContent = "Tiempo: " + timer;
 
-        if (timer <= 0) {
-            clearInterval(countdown);
-            alert("⏰ Se acabó el tiempo");
-        }
-    }, 1000);
+    if (timer <= 0) {
+        clearInterval(countdown);
+        gameOver = true;
+        finishGame();
+    }
+}, 1000);
 
+// Versículos asociados
+const versiculos = {
+    "Regocijo": "Hechos 13:48",
+    "Glorificar la Palabra": "Hechos 13:48",
+    "Fe": "Hechos 13:48",
+    "Gozo": "Hechos 13:52",
+    "Celos": "Hechos 13:45",
+    "Contradicción": "Hechos 13:45",
+    "Blasfemia": "Hechos 13:45",
+    "Persecución": "Hechos 13:52"
+};
 
-    items.forEach(item => {
-        item.addEventListener("dragstart", e => {
-            e.dataTransfer.setData("type", item.dataset.type);
-            e.dataTransfer.setData("text", item.innerText);
-            e.dataTransfer.setData("id", item.innerText);
-        });
+// Drag and Drop
+items.forEach(item => {
+    item.addEventListener("dragstart", e => {
+        if(gameOver || item.dataset.locked === "true") e.preventDefault();
+        e.dataTransfer.setData("type", item.dataset.type);
+        e.dataTransfer.setData("text", item.innerText);
     });
+});
 
-    dropzones.forEach(zone => {
-        zone.addEventListener("dragover", e => e.preventDefault());
+dropzones.forEach(zone => {
+    zone.addEventListener("dragover", e => e.preventDefault());
 
-        zone.addEventListener("drop", e => {
-            e.preventDefault();
+    zone.addEventListener("drop", e => {
+        if(gameOver) return;
+        e.preventDefault();
 
-            const itemType = e.dataTransfer.getData("type");
-            const text = e.dataTransfer.getData("text");
-            const zoneType = zone.dataset.type;
+        const itemType = e.dataTransfer.getData("type");
+        const text = e.dataTransfer.getData("text");
+        const zoneType = zone.dataset.type;
 
-            let originalItem = [...document.querySelectorAll(".item")]
-                .find(i => i.innerText === text);
+        let originalItem = [...document.querySelectorAll(".item")]
+            .find(i => i.innerText === text);
+        if (!originalItem) return;
 
-            if (!originalItem) return;
+        if (!originalItem.querySelector(".marker")) {
+            let marker = document.createElement("span");
+            marker.className = "marker";
 
             if (itemType === zoneType) {
                 document.getElementById("correctSound").play();
-
-                alert("✔ ¡Correcto! \"" + text + "\" pertenece aquí.");
-
-                let newItem = document.createElement("div");
-                newItem.className = "item";
-                newItem.style.background = zoneType === "positivo" ? "#4CAF50" : "#f44336";
-                newItem.style.cursor = "default";
-                newItem.innerText = text;
-
-                zone.appendChild(newItem);
-
-                originalItem.remove();
+                marker.textContent = "✔";
+                marker.style.color = "green";
                 correctCount++;
-
-                if (correctCount === totalItems) {
-                    document.getElementById("versiculos").style.display = "block";
-                    clearInterval(countdown);
-                }
-
             } else {
                 document.getElementById("wrongSound").play();
-                alert("✘ Incorrecto. \"" + text + "\" NO pertenece a este grupo.");
+                marker.textContent = "✘";
+                marker.style.color = "red";
+                errorCount++;
             }
-        });
+
+            originalItem.appendChild(marker);
+            originalItem.dataset.locked = "true"; // Bloquear para no mover más
+
+            // Mostrar versículo relacionado inmediatamente
+            let vContainer = document.getElementById("versiculos-items");
+            let p = document.createElement("p");
+            p.innerHTML = `<b>${text}:</b> ${versiculos[text]}`;
+            vContainer.appendChild(p);
+        }
+
+        originalItem.style.position = "relative";
+        originalItem.style.cursor = "default";
+        zone.appendChild(originalItem);
+
+        // Verificar si terminaron
+        if ((correctCount + errorCount) === totalItems) {
+            gameOver = true;
+            clearInterval(countdown);
+            showGameOverModal();
+        }
     });
+});
+
+function finishGame() {
+    items.forEach(item => item.draggable = false);
+
+    // Para los que quedaron fuera de dropzone
+    items.forEach(item => {
+        if(!item.parentNode.classList.contains("dropzone")) {
+            let type = item.dataset.type;
+            let zone = type === "positivo" ? document.getElementById("gentiles") : document.getElementById("judios");
+
+            if(!item.querySelector(".marker")) {
+                let marker = document.createElement("span");
+                marker.className = "marker";
+                marker.textContent = "✘";
+                marker.style.color = "red";
+                item.appendChild(marker);
+
+                let vContainer = document.getElementById("versiculos-items");
+                let p = document.createElement("p");
+                p.innerHTML = `<b>${item.innerText}:</b> ${versiculos[item.innerText]}`;
+                vContainer.appendChild(p);
+            }
+
+            item.dataset.locked = "true"; // Bloquear al colocar
+            zone.appendChild(item);
+        }
+    });
+
+    showGameOverModal();
+}
+
+function showGameOverModal() {
+    let msg = "🎉 ¡Juego completado! 🎉";
+    if(errorCount > 0) {
+        msg += "<br>Hubo algunos errores. ¡Repasa el texto y vuelve a intentarlo!";
+    }
+    document.getElementById("gameOverText").innerHTML = msg;
+    document.getElementById("gameOverModal").style.display = "flex";
+}
 </script>
 
 </body>
