--- a/index.html
+++ b/index.html
@@ -1,311 +1,235 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8">
-<title>La exhortación de Pablo en Antioquía (3ª. Parte) - Hechos 13:42-52</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>La exhortación de Pablo en Antioquía</title>
+
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background: #f3f3f3;
+        margin: 0;
         padding: 20px;
+        font-family: Arial;
+        background: #fafafa;
         text-align: center;
     }
-    h1 { margin-bottom: 10px; font-size: 24px; }
-    #timer { font-size: 22px; font-weight: bold; color: #d32f2f; }
+
+    h1 {
+        font-size: 22px;
+        margin-bottom: 10px;
+    }
 
     .container {
         display: flex;
-        justify-content: space-around;
-        margin-top: 30px;
+        flex-direction: column;
+        gap: 20px;
+        align-items: center;
+    }
+
+    .options {
+        display: flex;
         flex-wrap: wrap;
+        justify-content: center;
+        gap: 10px;
+        width: 100%;
+        max-width: 480px;
+    }
+
+    .draggable {
+        width: 110px;
+        height: 110px;
+        border-radius: 10px;
+        position: absolute;
+        touch-action: none;
+        user-select: none;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+        color: white;
+        font-weight: bold;
+    }
+
+    .dropzones {
+        display: flex;
+        gap: 20px;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
     }
 
     .dropzone {
-        width: 40%;
-        min-height: 250px;
-        padding: 20px;
+        width: 150px;
+        height: 150px;
+        border: 3px dashed #000;
         border-radius: 10px;
-        background: #fff;
         position: relative;
-        box-sizing: border-box;
-        border: 3px dashed #555;
     }
 
-    #judios { background-color: #fde0dc; }
-    #gentiles { background-color: #e0f7fa; }
-
-    .images {
-        margin-top: 30px;
-        display: flex;
-        justify-content: center;
-        gap: 20px;
-        flex-wrap: wrap;
-    }
-
-    .item {
-        width: 120px;
-        height: 120px;
-        border-radius: 10px;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: bold;
-        cursor: grab;
-        user-select: none;
-        position: relative;
-        font-size: 14px;
-        text-align: center;
-        padding: 5px;
-    }
-
-    #versiculos {
-        margin-top: 40px;
-        padding: 20px;
-        background: #fff;
-        border-radius: 10px;
-        text-align: left;
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .marker {
+    .mark {
         position: absolute;
+        bottom: -25px;
         font-size: 24px;
         font-weight: bold;
-        top: 0;
-        right: 0;
-        padding: 5px;
-        border-radius: 50%;
-    }
-
-    /* Modal */
-    #gameOverModal {
-        display: none;
-        position: fixed;
-        top:0; left:0;
         width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.6);
-        z-index: 1000;
-        justify-content: center;
-        align-items: center;
-        animation: fadeIn 0.5s;
-    }
-
-    #gameOverContent {
-        background: #fff;
-        padding: 30px;
-        border-radius: 15px;
         text-align: center;
-        font-size: 24px;
-        font-weight: bold;
-        max-width: 500px;
-        animation: popIn 0.5s;
     }
 
-    @keyframes popIn {
-        0% { transform: scale(0.5); opacity: 0; }
-        100% { transform: scale(1); opacity: 1; }
-    }
-
-    @keyframes fadeIn {
-        from { opacity: 0; } 
-        to { opacity: 1; }
-    }
-
-    #gameOverContent button {
+    #verso {
         margin-top: 20px;
-        padding: 10px 20px;
         font-size: 18px;
-        cursor: pointer;
-        border: none;
-        background: #1976d2;
-        color: white;
-        border-radius: 8px;
+        font-weight: bold;
+        min-height: 60px;
     }
 </style>
 </head>
+
 <body>
 
-<h1>La exhortación de Pablo en Antioquía (3ª. Parte)<br>
-Regocijo y persecución por la Palabra<br>
-Hechos 13:42-52</h1>
-
-<div id="timer">Tiempo: 60</div>
-<h3>Arrastra cada reacción al grupo correcto</h3>
+<h1>La exhortación de Pablo en Antioquía (3ª Parte)<br>Regocijo y persecución por la Palabra<br>Hechos 13:42-52</h1>
 
 <div class="container">
-    <div id="judios" class="dropzone" data-type="negativo">
-        <h2>Judíos</h2>
+    
+    <div id="options" class="options"></div>
+
+    <div class="dropzones">
+        <div id="jews" class="dropzone"></div>
+        <div id="gentiles" class="dropzone"></div>
     </div>
-    <div id="gentiles" class="dropzone" data-type="positivo">
-        <h2>Gentiles</h2>
-    </div>
-</div>
 
-<div class="images" id="imagenes">
-    <div class="item" draggable="true" data-type="positivo" style="background:#4CAF50;">Regocijo</div>
-    <div class="item" draggable="true" data-type="positivo" style="background:#1E88E5;">Glorificar la Palabra</div>
-    <div class="item" draggable="true" data-type="positivo" style="background:#FDD835;">Fe</div>
-    <div class="item" draggable="true" data-type="positivo" style="background:#FB8C00;">Gozo</div>
-    <div class="item" draggable="true" data-type="negativo" style="background:#f44336;">Celos</div>
-    <div class="item" draggable="true" data-type="negativo" style="background:#8E24AA;">Contradicción</div>
-    <div class="item" draggable="true" data-type="negativo" style="background:#00ACC1;">Blasfemia</div>
-    <div class="item" draggable="true" data-type="negativo" style="background:#D81B60;">Persecución</div>
-</div>
-
-<audio id="correctSound" src="correct.mp3"></audio>
-<audio id="wrongSound" src="wrong.mp3"></audio>
-
-<div id="versiculos">
-    <h2>Versículos:</h2>
-    <div id="versiculos-items"></div>
-</div>
-
-<div id="gameOverModal">
-    <div id="gameOverContent">
-        <div id="gameOverText"></div>
-        <button onclick="location.reload()">Jugar de nuevo</button>
-    </div>
+    <div id="verso"></div>
 </div>
 
 <script>
-let items = document.querySelectorAll(".item");
-let dropzones = document.querySelectorAll(".dropzone");
-let totalItems = items.length;
-let correctCount = 0;
-let errorCount = 0;
-let gameOver = false;
+/* -------------------- DATOS --------------------- */
 
-let timer = 60;
-let timerElement = document.getElementById("timer");
-let countdown = setInterval(() => {
-    if(gameOver) return;
-    timer--;
-    timerElement.textContent = "Tiempo: " + timer;
-    if(timer<=0){ clearInterval(countdown); gameOver=true; finishGame(); }
-},1000);
+const colores = [
+    "#FF5733", "#33FF57", "#3357FF", "#FF33A8",
+    "#33FFF5", "#A833FF", "#FFC733", "#FF8F33"
+];
 
-const versiculos = {
-    "Regocijo":"Hechos 13:48",
-    "Glorificar la Palabra":"Hechos 13:48",
-    "Fe":"Hechos 13:48",
-    "Gozo":"Hechos 13:52",
-    "Celos":"Hechos 13:45",
-    "Contradicción":"Hechos 13:45",
-    "Blasfemia":"Hechos 13:45",
-    "Persecución":"Hechos 13:52"
-};
+const respuestas = [
+    { texto: "Glorificar la Palabra", zona: "gentiles", verso: "Hechos 13:48" },
+    { texto: "Se opusieron a Pablo", zona: "jews", verso: "Hechos 13:45" },
+    { texto: "Creyeron muchos", zona: "gentiles", verso: "Hechos 13:48" },
+    { texto: "Persecución contra Pablo", zona: "jews", verso: "Hechos 13:50" }
+];
 
-// Draggable + touch
-function makeDraggable(item){
-    // mouse
-    item.addEventListener("dragstart", e=>{
-        if(gameOver || item.dataset.locked==="true") e.preventDefault();
-        e.dataTransfer.setData("type",item.dataset.type);
-        e.dataTransfer.setData("text",item.innerText);
-    });
-    // touch
-    item.addEventListener("touchstart", e=>{
-        if(gameOver || item.dataset.locked==="true") return;
-        let touch = e.touches[0];
-        item.style.position="absolute";
-        item.style.zIndex=1000;
-        moveAt(touch.pageX, touch.pageY);
+/* ------------ CREAR LAS TARJETAS ------------ */
 
-        function moveAt(x,y){
-            item.style.left = x-item.offsetWidth/2 + "px";
-            item.style.top = y-item.offsetHeight/2 + "px";
-        }
+let optionsDiv = document.getElementById("options");
 
-        function onTouchMove(e){
-            let touch = e.touches[0];
-            moveAt(touch.pageX, touch.pageY);
-        }
-        document.addEventListener("touchmove",onTouchMove);
+respuestas.forEach((r, i) => {
+    let div = document.createElement("div");
+    div.classList.add("draggable");
+    div.innerText = r.texto;
+    div.dataset.target = r.zona;
+    div.dataset.verso = r.verso;
+    div.style.background = colores[i % colores.length];
+    div.style.position = "relative";
+    div.style.touchAction = "none";
 
-        item.addEventListener("touchend", e=>{
-            document.removeEventListener("touchmove",onTouchMove);
-            // Detectar dropzone
-            let dropped = false;
-            dropzones.forEach(zone=>{
-                let rect = zone.getBoundingClientRect();
-                let centerX = item.getBoundingClientRect().left + item.offsetWidth/2;
-                let centerY = item.getBoundingClientRect().top + item.offsetHeight/2;
-                if(centerX>=rect.left && centerX<=rect.right && centerY>=rect.top && centerY<=rect.bottom){
-                    checkDrop(item, zone);
-                    dropped = true;
-                }
-            });
-            if(!dropped) checkDrop(item,null);
-        }, {once:true});
-    });
-}
-
-items.forEach(item=>makeDraggable(item));
-
-dropzones.forEach(zone=>{
-    zone.addEventListener("dragover", e=>e.preventDefault());
-    zone.addEventListener("drop", e=>{
-        e.preventDefault();
-        const text = e.dataTransfer.getData("text");
-        let original = [...items].find(i=>i.innerText===text);
-        if(original) checkDrop(original, zone);
-    });
+    optionsDiv.appendChild(div);
 });
 
-function checkDrop(item, zone=null){
-    if(!zone) zone = item.dataset.type==="positivo"?document.getElementById("gentiles"):document.getElementById("judios");
-    if(item.dataset.locked==="true") return;
+/* ------------ DRAG & DROP PARA CELULAR + PC ------------ */
 
-    let marker = document.createElement("span");
-    marker.className="marker";
+let draggables = document.querySelectorAll(".draggable");
+let dropzones = document.querySelectorAll(".dropzone");
 
-    if(item.dataset.type===zone.dataset.type){
-        marker.textContent="✔";
-        marker.style.color="green";
-        correctCount++;
-        document.getElementById("correctSound").play();
-    }else{
-        marker.textContent="✘";
-        marker.style.color="red";
-        errorCount++;
-        document.getElementById("wrongSound").play();
+draggables.forEach(el => {
+
+    let offsetX = 0, offsetY = 0;
+
+    /* MOUSE */
+    el.addEventListener("mousedown", startDrag);
+    document.addEventListener("mousemove", drag);
+    document.addEventListener("mouseup", endDrag);
+
+    /* TOUCH */
+    el.addEventListener("touchstart", startDrag);
+    document.addEventListener("touchmove", drag, { passive: false });
+    document.addEventListener("touchend", endDrag);
+
+    function startDrag(e) {
+        el.style.zIndex = 1000;
+        let point = e.touches ? e.touches[0] : e;
+
+        let rect = el.getBoundingClientRect();
+        offsetX = point.clientX - rect.left;
+        offsetY = point.clientY - rect.top;
+
+        el.dataset.dragging = "true";
     }
 
-    item.appendChild(marker);
-    item.dataset.locked="true";
-    item.style.cursor="default";
-    item.style.position="relative";
-    zone.appendChild(item);
+    function drag(e) {
+        if (el.dataset.dragging !== "true") return;
 
-    let key = item.innerText.trim();
-    let vContainer = document.getElementById("versiculos-items");
-    let p = document.createElement("p");
-    p.innerHTML = `<b>${key}:</b> ${versiculos[key] || ""}`;
-    vContainer.appendChild(p);
+        e.preventDefault();
 
-    if((correctCount+errorCount)===totalItems){ gameOver=true; clearInterval(countdown); showGameOverModal(); }
-}
+        let point = e.touches ? e.touches[0] : e;
 
-function finishGame(){
-    items.forEach(i=>i.dataset.locked="true");
-    items.forEach(i=>{
-        if(!i.parentNode.classList.contains("dropzone")){
-            let zone = i.dataset.type==="positivo"?document.getElementById("gentiles"):document.getElementById("judios");
-            checkDrop(i, zone);
-        }
-    });
-}
+        let x = point.clientX - offsetX;
+        let y = point.clientY - offsetY;
 
-function showGameOverModal(){
-    let msg="🎉 ¡Juego completado! 🎉";
-    if(errorCount>0) msg+="<br>Hubo algunos errores. ¡Repasa el texto y vuelve a intentarlo!";
-    document.getElementById("gameOverText").innerHTML=msg;
-    document.getElementById("gameOverModal").style.display="flex";
+        el.style.position = "absolute";
+        el.style.left = x + "px";
+        el.style.top = y + "px";
+    }
+
+    function endDrag() {
+        if (el.dataset.dragging !== "true") return;
+        el.dataset.dragging = "false";
+
+        let placed = false;
+
+        dropzones.forEach(zone => {
+            let z = zone.getBoundingClientRect();
+            let d = el.getBoundingClientRect();
+
+            let overlap =
+                d.right > z.left &&
+                d.left < z.right &&
+                d.bottom > z.top &&
+                d.top < z.bottom;
+
+            if (overlap) {
+                placed = true;
+
+                // Acomodar al centro del dropzone
+                el.style.left = (z.left + (z.width - d.width) / 2) + "px";
+                el.style.top = (z.top + (z.height - d.height) / 2) + "px";
+
+                // Validar
+                validar(el, zone.id);
+            }
+        });
+
+        // Si no cayó en zona → se queda donde soltó (NO regresa)
+    }
+});
+
+/* ------------ VALIDACIÓN ------------ */
+
+function validar(el, zona) {
+    let correcta = el.dataset.target === zona;
+    let verso = document.getElementById("verso");
+
+    let mark = document.createElement("div");
+    mark.classList.add("mark");
+    mark.innerText = correcta ? "✔" : "✘";
+    mark.style.color = correcta ? "green" : "red";
+    el.appendChild(mark);
+
+    verso.innerText = correcta ?
+        "Correcto: " + el.dataset.verso :
+        "Incorrecto: " + el.dataset.verso;
+
+    // Bloquear
+    el.dataset.locked = "true";
+    el.style.pointerEvents = "none";
 }
 </script>
+
 </body>
 </html>
